--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="min-h-full">
+  <app-header></app-header>
+  <main>
+    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+      <div class="px-4 py-6 sm:px-0">
+        <div class="border-4 border-dashed border-gray-200 rounded-lg h-96 min-h-96">
+        </div>
+      </div>
+    </div>
+  </main>
+</div>
 
