--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="mx-auto pb-6">
+  <app-hero></app-hero>
+  <div class="px-10 py-6 sm:px-user-6 sm:px-10 lg:px-40">
+    <p>home works!</p>
+  </div>
+</div>
