--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="relative bg-white">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<div class="sticky top-0 z-50 bg-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 bg-white">
     <div class="flex justify-between items-center border-b-2 border-gray-100 py-6">
       <!-- ============================================================== -->
       <!-- Logo -->
@@ -28,6 +28,20 @@
       <!-- Fin Botón Abrir Menú-->
       <!-- ============================================================== -->
       <!-- ============================================================== -->
+          <!-- Botón Cerrar Menú -->
+          <!-- ============================================================== -->
+          <div class="-mr-2 -my-2 md:hidden" [ngClass]="{'hidden': !showMenu, 'flex': showMenu}">
+            <button (click)="toggleNavbar()" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+              <span class="sr-only">Close menu</span>
+              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </div>
+          <!-- ============================================================== -->
+          <!-- Fin Botón Cerrar Menú-->
+          <!-- ============================================================== -->
+      <!-- ============================================================== -->
       <!-- Menú-->
       <!-- ============================================================== -->
       <nav class="hidden md:flex space-x-10">
@@ -50,35 +64,10 @@
       <!-- ============================================================== -->
     </div>
   </div>
-  <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden" [ngClass]="{'hidden': !showMenu}">
+  <div class="sticky top-0 z-50 inset-x-0 p-2 transition transform origin-top-right md:hidden" [ngClass]="{'hidden': !showMenu}">
     <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
       <div class="pt-5 pb-6 px-5">
-        <div class="flex items-center justify-between">
-          <!-- ============================================================== -->
-          <!-- Logo -->
-          <!-- ============================================================== -->
-          <div>
-            <img class="h-8 w-auto" src="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60b7723caeacc9575ca744a2_pulpo-logo-blue.svg" alt="Movies App">
-          </div>
-          <!-- ============================================================== -->
-          <!-- Fin Logo -->
-          <!-- ============================================================== -->
-          <!-- ============================================================== -->
-          <!-- Botón Cerrar Menú -->
-          <!-- ============================================================== -->
-          <div class="-mr-2" [ngClass]="{'hidden': !showMenu, 'flex': showMenu}">
-            <button (click)="toggleNavbar()" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-              <span class="sr-only">Close menu</span>
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-          </div>
-          <!-- ============================================================== -->
-          <!-- Fin Botón Cerrar Menú-->
-          <!-- ============================================================== -->
-        </div>
-        <div class="mt-6">
+        <div class="mt-4">
            <!-- ============================================================== -->
           <!-- Menú-->
           <!-- ============================================================== -->
