Feature: Implementar carrusel para el home, usar tw-elements

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mx-auto pb-6">
-  <app-hero></app-hero>
+  <app-carrusel></app-carrusel>
   <div class="px-10 py-6 sm:px-user-6 sm:px-10 lg:px-40">
     <p>home works!</p>
   </div>
