--- a/src/app/shared/carrusel/carrusel.component.html
+++ b/src/app/shared/carrusel/carrusel.component.html
@@ -1,14 +1,14 @@
 <div id="carouselExampleIndicators" class="carousel slide relative" data-bs-ride="carousel">
   <div class="carousel-inner relative w-full overflow-hidden">
     <div *ngFor="let movie of popularMovies; index as i;" [class]="i === 0 ? 'active':''" class="carousel-item float-left w-full">
-      <div class="container mx-auto flex px-28 py-16 md:flex-row flex-col items-center" style="background-image: url('./assets/image_blur_bg.jpg');background-repeat: no-repeat;background-size: cover;-webkit-background-size: cover;background-position: center center;height: auto;
+      <div class="container mx-auto flex px-28 py-16 md:flex-row flex-col items-center" style="background-image: url('./assets/image_blur_bg.jpg');background-repeat: no-repeat;background-size: cover;-webkit-background-size: cover;background-position: center center;max-height: 100vh;
       max-width: 100%">
         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 flex flex-col md:items-end md:text-right items-end text-right">
           <img class="object-cover object-center rounded" alt="hero" [src]="imgUrl + movie.poster_path">
         </div>
         <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-          <h1 class="title-font sm:text-4xl text-lg mb-4 font-medium text-gray-900">{{ movie.original_title }}</h1>
-          <p class="mb-8 leading-relaxed sm:hidden-user">{{ movie.overview }}</p>
+          <h1 class="title-font sm:text-4xl text-lg mb-4 line-clamp-1 sm:line-clamp-3 font-semibold text-gray-900">{{ movie.original_title }}</h1>
+          <p class="mb-8 leading-relaxed line-clamp-2 sm:line-clamp-3 md:line-clamp-4">{{ movie.overview }}</p>
           <div class="flex justify-center">
             <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Ver más...</button>
           </div>
