Feature: Implementar pipe para poster de películas, llenar cards con información de películas

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="mx-auto pb-6">
   <div *ngIf="popularMovies.length > 0">
-    <app-carrusel [popularMovies]="popularMovies" [imgUrl]="imgUrl"></app-carrusel>
+    <app-carrusel [popularMovies]="popularMovies"></app-carrusel>
   </div>
   <div class="px-10 py-6 sm:px-user-6 sm:px-10 lg:px-36">
 
