--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,46 +1,53 @@
-<!-- <div class="md:w-1/2 lg:w-1/3 p-4 w-full"> -->
-  <div class="flex max-w-md mx-auto overflow-hidden bg-white rounded-lg shadow-lg">
-    <div class="w-1/3 bg-cover" style="background-image: url('https://image.tmdb.org/t/p/w342/jrgifaYeUtTnaH7NF5Drkgjg2MB.jpg')"></div>
+<div class="flex max-w-md mx-auto overflow-hidden bg-white rounded-lg shadow-md">
+  <div class="w-1/3 bg-cover" [ngStyle]="{'background-image': 'url('+ (movie.poster_path | poster) +')'}"></div>
 
-    <div class="w-2/3 p-4 md:p-4">
-        <h1 class="text-lg font-bold text-gray-800">Backpack</h1>
+  <div class="w-2/3 p-4 md:p-4">
+      <h1 class="text-base font-bold text-gray-800 line-clamp-1">{{ movie.title }}</h1>
 
-        <p class="mt-2 text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit In odit</p>
+      <p class="mt-2 text-xs text-gray-600 line-clamp-2">{{ movie.overview }}</p>
 
-        <div class="flex mt-2 item-center">
-            <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
-                <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+      <div class="flex mt-2 item-center">
+          <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
+              <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+          </svg>
+
+          <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
+              <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+          </svg>
+
+          <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
+              <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+          </svg>
+
+          <svg class="w-5 h-5 text-gray-400 fill-current" viewBox="0 0 24 24">
+              <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+          </svg>
+
+          <svg class="w-5 h-5 text-gray-400 fill-current" viewBox="0 0 24 24">
+              <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
+          </svg>
+      </div>
+
+      <div class="flex justify-between mt-3 item-center">
+        <div class="flex">
+          <span class="mr-1">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
             </svg>
-
-            <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
-                <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
-            </svg>
-
-            <svg class="w-5 h-5 text-gray-800 fill-current" viewBox="0 0 24 24">
-                <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
-            </svg>
-
-            <svg class="w-5 h-5 text-gray-400 fill-current" viewBox="0 0 24 24">
-                <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
-            </svg>
-
-            <svg class="w-5 h-5 text-gray-400 fill-current" viewBox="0 0 24 24">
-                <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z"/>
-            </svg>
+          </span>
+          <h1 class="text-lg font-bold text-gray-700 md:text-lg">
+            {{ movie.popularity | number: '1.1-2' }}
+          </h1>
         </div>
-
-        <div class="flex justify-between mt-3 item-center">
-            <h1 class="text-lg font-bold text-gray-700 md:text-xl">$220</h1>
-            <button data-tooltip-target="tooltip-default" class="flex-none flex items-center justify-center w-9 h-9 rounded-full text-indigo-600 bg-violet-50" type="button" aria-label="Agregar a watchlist">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
-              </svg>
-            </button>
-            <div id="tooltip-default" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-              Agregar a wishlist
-              <div class="tooltip-arrow" data-popper-arrow></div>
-            </div>
+        <button data-tooltip-target="tooltip-default" class="flex-none flex items-center justify-center w-9 h-9 rounded-full text-indigo-600 bg-violet-50" type="button" aria-label="Agregar a watchlist">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" aria-hidden="true">
+            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div id="tooltip-default" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+          Agregar a wishlist
+          <div class="tooltip-arrow" data-popper-arrow></div>
         </div>
-    </div>
+      </div>
   </div>
-<!-- </div> -->
+</div>
