--- a/src/app/shared/carrusel/carrusel.component.html
+++ b/src/app/shared/carrusel/carrusel.component.html
@@ -1,10 +1,13 @@
 <div id="carouselExampleIndicators" class="carousel slide relative" data-bs-ride="carousel">
   <div class="carousel-inner relative w-full overflow-hidden">
-    <div *ngFor="let movie of popularMovies; index as i;" [class]="i === 0 ? 'active':''" class="carousel-item float-left w-full">
+    <!-- ============================================================== -->
+    <!-- Slider Bucle -->
+    <!-- ============================================================== -->
+    <div *ngFor="let movie of popularMovies; first as asFirst;" [class]="asFirst ? 'active':''" class="carousel-item float-left w-full">
       <div class="container mx-auto flex px-28 py-16 md:flex-row flex-col items-center" style="background-image: url('./assets/image_blur_bg.jpg');background-repeat: no-repeat;background-size: cover;-webkit-background-size: cover;background-position: center center;max-height: 100vh;
       max-width: 100%">
         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 flex flex-col md:items-end md:text-right items-end text-right">
-          <img class="object-cover object-center rounded" alt="hero" [src]="imgUrl + movie.poster_path">
+          <img class="object-cover object-center rounded" alt="hero" [src]="movie.poster_path | poster">
         </div>
         <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
           <h1 class="title-font sm:text-4xl text-lg mb-4 line-clamp-1 sm:line-clamp-3 font-semibold text-gray-900">{{ movie.original_title }}</h1>
@@ -15,7 +18,13 @@
         </div>
       </div>
     </div>
+    <!-- ============================================================== -->
+    <!-- Fin Slider Bucle -->
+    <!-- ============================================================== -->
   </div>
+  <!-- ============================================================== -->
+  <!-- Botones de Control -->
+  <!-- ============================================================== -->
   <button
     class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0"
     type="button"
@@ -34,4 +43,7 @@
     <span class="carousel-control-next-icon inline-block bg-no-repeat" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  <!-- ============================================================== -->
+  <!-- Fin Botones de Control -->
+  <!-- ============================================================== -->
 </div>
