--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -2,7 +2,7 @@
   <div class="container px-5 py-5 mx-auto">
     <div class="flex flex-wrap -m-4">
       <div class="md:w-1/2 lg:w-1/3 p-4 w-full" *ngFor="let movie of movies$ | async">
-        <app-card></app-card>
+        <app-card [movie]="movie"></app-card>
       </div>
     </div>
   </div>
