--- a/src/app/shared/carrusel/carrusel.component.html
+++ b/src/app/shared/carrusel/carrusel.component.html
@@ -12,9 +12,10 @@
         <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
           <h1 class="title-font sm:text-4xl text-lg mb-4 line-clamp-1 sm:line-clamp-3 font-semibold text-gray-900">{{ movie.original_title }}</h1>
           <p class="mb-8 leading-relaxed line-clamp-2 sm:line-clamp-3 md:line-clamp-4">{{ movie.overview }}</p>
-          <div class="flex justify-center">
-            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Ver más...</button>
-          </div>
+          <button type="button" class="text-white bg-indigo-600 hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+            Ver más
+            <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </button>
         </div>
       </div>
     </div>
