Feature: Implementar routerlink, crar pipe para mostrar generos de peliculas

--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -2,7 +2,13 @@
   <div class="container px-5 py-5 mx-auto">
     <div class="flex flex-wrap -m-4">
       <div class="md:w-1/2 lg:w-1/3 p-4 w-full" *ngFor="let movie of movies$ | async">
+        <!-- ============================================================== -->
+        <!-- Card de la película -->
+        <!-- ============================================================== -->
         <app-card [movie]="movie"></app-card>
+        <!-- ============================================================== -->
+        <!-- Fin card de la película -->
+        <!-- ============================================================== -->
       </div>
     </div>
   </div>
