--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -3,7 +3,7 @@
   <!-- Imagen -->
   <!-- ============================================================== -->
   <div class="relative flex-none w-1/3">
-    <div class="relative z-20 overflow-hidden flex-none -my-2" style="width: auto; height: 108%;">
+    <div class="relative z-10 overflow-hidden flex-none -my-2" style="width: auto; height: 108%;">
       <img
         [src]="movie.poster_path | poster"
         alt="Imagen de la película"
@@ -23,15 +23,36 @@
 
     <p class="mt-2 text-xs text-gray-600 line-clamp-2">{{ movie.overview || 'Sin sinopsis.' }}</p>
     <!-- ============================================================== -->
-    <!-- Rating de la película, se transforma el promedio de 0 a 10 estrellas al promedio de 0 a 5 estrellas -->
+    <!-- Géneros de películas, se muestran sólo las primeras dos, la información completa se muestra en el tooltip-->
     <!-- ============================================================== -->
-    <div class="flex mt-2 item-center border-b border-slate-200">
-      <star-rating [value]="(movie.vote_average * 5)/10" [totalstars]="5" checkedcolor="#eab308" uncheckedcolor="#9ca3af" size="20px" [readonly]="true"></star-rating>
+    <div class="flex mt-2 items-center justify-between border-b border-slate-200">
+      <div class="w-2/3">
+        <p tooltip="{{ movie.genre_ids | moviegenres }}"
+          placement="top"
+          [showDelay]="50"
+          tooltipClass="text-xs tooltip-theme"
+          [hideDelay]="0"
+          class="text-[0.65rem] leading-3 overflow-hidden text-gray-500">
+          {{ (movie.genre_ids | moviegenres) | slice:0:2 }}
+        </p>
+      </div>
+       <!-- ============================================================== -->
+      <!-- Fin géneros de películas -->
+      <!-- ============================================================== -->
+      <!-- ============================================================== -->
+      <!-- Rating de la película, se transforma el promedio de 0 a 10 estrellas al promedio de 0 a 5 estrellas es más familiar para el usuario -->
+      <!-- ============================================================== -->
+      <div class="w-1/3 flex">
+        <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+        </svg>
+        <p class="text-sm font-medium text-gray-500">{{ ((movie.vote_average * 5)/10) | number:'1.1-1'  }}</p>
+      </div>
+      <!-- ============================================================== -->
+      <!-- Fin rating de la película -->
+      <!-- ============================================================== -->
     </div>
-    <!-- ============================================================== -->
-    <!-- Fin rating de la película -->
-    <!-- ============================================================== -->
-    <div class="flex justify-between mt-3 item-center">
+    <div class="flex justify-between mt-3">
       <!-- ============================================================== -->
       <!-- Popularidad de la película -->
       <!-- ============================================================== -->
@@ -51,15 +72,11 @@
       <!-- ============================================================== -->
       <!-- Botón Agregar a watchlist-->
       <!-- ============================================================== -->
-      <button data-tooltip-target="tooltip-default" class="flex-none flex items-center justify-center w-9 h-9 rounded-full text-indigo-600 bg-violet-50" type="button" aria-label="Agregar a watchlist">
+      <button tooltip="Agregar a watchlist" placement="top" [showDelay]="50" tooltipClass="text-sm font-medium tooltip-theme" [hideDelay]="0" class="flex-none flex items-center justify-center w-9 h-9 rounded-full text-blue-700 bg-violet-50" type="button">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
         </svg>
       </button>
-      <div id="tooltip-default" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-        Agregar a watchlist
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
       <!-- ============================================================== -->
       <!-- Fin botón Agregar a watchlist-->
       <!-- ============================================================== -->
