--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="sticky top-0 z-50 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 bg-white">
-    <div class="flex justify-between items-center border-b-2 border-gray-100 py-6">
+    <div class="flex justify-between items-center border-b-2 border-gray-100 py-4">
       <!-- ============================================================== -->
       <!-- Logo -->
       <!-- ============================================================== -->
       <div class="flex justify-start lg:w-0 lg:flex-1">
-        <a href="#">
+        <a routerLink="home">
           <span class="sr-only">Movies App</span>
           <img class="h-8 w-auto sm:h-10" src="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60b7723caeacc9575ca744a2_pulpo-logo-blue.svg" alt="Movies App">
         </a>
@@ -45,13 +45,13 @@
       <!-- Menú-->
       <!-- ============================================================== -->
       <nav class="hidden md:flex space-x-10">
-        <a href="#" class="flex font-medium text-gray-500 hover:text-blue-700">
+        <a routerLink="home" routerLinkActive #home="routerLinkActive" [class]="(home.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'">
           <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
           </svg>
           <span class="ml-3 text-base font-medium"> Home </span>
         </a>
-        <a href="#" class="flex font-medium text-gray-500 hover:text-blue-700">
+        <a routerLink="watchlist" routerLinkActive #watchlist="routerLinkActive" [class]="(watchlist.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'">
           <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
             <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
             <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
@@ -64,7 +64,7 @@
       <!-- ============================================================== -->
     </div>
   </div>
-  <div class="sticky top-0 z-50 inset-x-0 p-2 transition transform origin-top-right md:hidden" [ngClass]="{'hidden': !showMenu}">
+  <div class="sticky top-0 z-50 inset-x-0 px-2 transition transform origin-top-right md:hidden" [ngClass]="{'hidden': !showMenu}">
     <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
       <div class="pt-5 pb-6 px-5">
         <div class="mt-4">
@@ -72,19 +72,19 @@
           <!-- Menú-->
           <!-- ============================================================== -->
           <nav class="grid gap-y-8">
-            <a href="#" class="-m-3 p-3 flex items-center rounded-md hover:bg-gray-50">
-              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <a routerLink="home" routerLinkActive #home="routerLinkActive" [class]="(home.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'">
+              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
               </svg>
-              <span class="ml-3 text-base font-medium text-gray-900"> Home </span>
+              <span class="ml-3 text-base font-medium"> Home </span>
             </a>
 
-            <a href="#" class="-m-3 p-3 flex items-center rounded-md hover:bg-gray-50">
-              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+            <a routerLink="watchlist" routerLinkActive #watchlist="routerLinkActive" [class]="(watchlist.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'">
+              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                 <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
                 <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
               </svg>
-              <span class="ml-3 text-base font-medium text-gray-900"> Watchlist </span>
+              <span class="ml-3 text-base font-medium"> Watchlist </span>
             </a>
           </nav>
           <!-- ============================================================== -->
