--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,9 @@
     display: none;
   }
 }
+
+.tooltip-theme{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+  color: white !important;
+}
