--- a/src/app/shared/carrusel/carrusel.component.html
+++ b/src/app/shared/carrusel/carrusel.component.html
@@ -9,7 +9,7 @@
         <!-- Poster de la película -->
         <!-- ============================================================== -->
         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-3 md:mb-0 flex flex-col md:items-end md:text-right items-end text-right">
-          <img class="object-cover object-center rounded" alt="hero" [src]="movie.poster_path | poster">
+          <img class="object-cover object-center rounded shadow-md shadow-white/60" alt="hero" [src]="movie.poster_path | poster">
         </div>
         <!-- ============================================================== -->
         <!-- Fin poster de la película -->
@@ -17,10 +17,12 @@
         <!-- ============================================================== -->
         <!-- Información de la película -->
         <!-- ============================================================== -->
-        <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-          <h1 class="title-font md:text-4xl text-base mb-3 line-clamp-1 sm:line-clamp-3 font-semibold text-gray-900">{{ movie.original_title }}</h1>
-          <p class="mb-3 leading-relaxed line-clamp-2 sm:line-clamp-2 md:line-clamp-4">{{ movie.overview }}</p>
-          <button type="button" class="text-white bg-blue-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2 text-center inline-flex items-center">
+        <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center lg:pr-4">
+          <div class="backdrop-blur-xl bg-black/50 rounded px-2 mb-3 shadow-sm shadow-white/60">
+            <h1 class="title-font md:text-3xl text-base mb-3 line-clamp-1 sm:line-clamp-3 font-semibold text-white">{{ movie.original_title }}</h1>
+            <p class="leading-relaxed line-clamp-2 sm:line-clamp-2 md:line-clamp-4 text-white text-sm">{{ movie.overview }}</p>
+          </div>
+          <button type="button" class="text-white bg-blue-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center inline-flex items-center">
             Ver más
             <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
