Feature: Crear vista de la watchlist y funcionalidad para eliminar de watchlist

--- a/src/app/pages/nopagefound/nopagefound.component.html
+++ b/src/app/pages/nopagefound/nopagefound.component.html
@@ -5,7 +5,7 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Error 404 : Página No Encontrada</h1>
       <p class="mb-8 leading-relaxed">Es posible que la página que está buscando haya sido eliminada debido a un cambio de nombre o no esté disponible temporalmente.</p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Regresar al Home</button>
+        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" routerLink="/home">Regresar al Home</button>
       </div>
     </div>
   </div>
