--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-full">
   <app-header></app-header>
   <main class=relative>
-    <router-outlet></router-outlet>
+    <router-outlet></router-outlet> <!-- Renderiza las páginas del módulo -->
   </main>
 </div>
