--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -5,10 +5,11 @@
   <div class="relative flex-none w-1/3">
     <div class="relative z-10 overflow-hidden flex-none -my-2" style="width: auto; height: 108%;">
       <img
+        (click)="goToMovie(movie.id)"
         [src]="movie.poster_path | poster"
         alt="Imagen de la película"
         loading="lazy"
-        class="absolute inset-0 w-full h-full object-fill rounded-md"
+        class="absolute inset-0 w-full h-full object-fill cursor-pointer rounded-md wow animate__animated animate__fadeIn"
       />
     </div>
   </div>
@@ -19,7 +20,9 @@
   <!-- Información de la película -->
   <!-- ============================================================== -->
   <div class="w-2/3 p-4 md:p-4">
-    <h1 class="text-base font-bold text-gray-800 line-clamp-1 cursor-pointer"
+    <h1
+      (click)="goToMovie(movie.id)"
+      class="text-base font-bold text-gray-800 line-clamp-1 cursor-pointer"
       tooltip="{{ movie.title }}"
       placement="top"
       [showDelay]="50"
@@ -51,8 +54,15 @@
       <!-- Rating de la película, se transforma el promedio de 0 a 10 estrellas al promedio de 0 a 5 estrellas es más familiar para el usuario -->
       <!-- ============================================================== -->
       <div class="w-1/3 flex">
-        <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+        <svg
+          class="w-5 h-5 text-yellow-400"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+          />
         </svg>
         <p class="text-sm font-medium text-gray-500">{{ ((movie.vote_average * 5)/10) | number:'1.1-1'  }}</p>
       </div>
@@ -66,8 +76,14 @@
       <!-- ============================================================== -->
       <div class="flex items-center">
         <span class="mr-1">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
-            <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            viewBox="0 0 20 20"
+            fill="currentColor">
+            <path
+              d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"
+            />
           </svg>
         </span>
         <h2 class="text-lg font-bold text-gray-700 md:text-lg">
@@ -91,12 +107,25 @@
         tooltipClass="text-sm font-medium tooltip-theme"
         type="button"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          fill="currentColor"
+          aria-hidden="true"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+            clip-rule="evenodd"
+          />
         </svg>
       </button>
       <!-- ============================================================== -->
       <!-- Fin botón Agregar a watchlist-->
+      <!-- ============================================================== -->
+      <!-- ============================================================== -->
+      <!-- Botón Eliminar de watchlist-->
       <!-- ============================================================== -->
       <button
         *ngIf="movie.isInWatchlist"
@@ -109,10 +138,23 @@
         tooltipClass="text-sm font-medium tooltip-theme"
         type="button"
       >
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"
+        />
       </svg>
       </button>
+      <!-- ============================================================== -->
+      <!-- Fin botón Eliminar de watchlist-->
+      <!-- ============================================================== -->
     </div>
   </div>
   <!-- ============================================================== -->
