--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,11 @@
       <div class="flex justify-start lg:w-0 lg:flex-1">
         <a routerLink="home">
           <span class="sr-only">Movies App</span>
-          <img class="h-8 w-auto sm:h-10" src="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60b7723caeacc9575ca744a2_pulpo-logo-blue.svg" alt="Movies App">
+          <img
+            class="h-8 w-auto sm:h-10"
+            src="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60b7723caeacc9575ca744a2_pulpo-logo-blue.svg"
+            alt="Movies App"
+          >
         </a>
       </div>
       <!-- ============================================================== -->
@@ -17,9 +21,22 @@
       <!-- Botón Abrir Menú-->
       <!-- ============================================================== -->
       <div class="-mr-2 -my-2 md:hidden" [ngClass]="{'hidden': showMenu, 'flex': !showMenu}">
-        <button (click)="toggleNavbar()" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+        <button
+          (click)="toggleNavbar()"
+          type="button"
+          class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+          aria-expanded="false"
+        >
           <span class="sr-only">Open menu</span>
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+          <svg
+            class="h-6 w-6"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            aria-hidden="true"
+          >
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
@@ -31,9 +48,21 @@
           <!-- Botón Cerrar Menú -->
           <!-- ============================================================== -->
           <div class="-mr-2 -my-2 md:hidden" [ngClass]="{'hidden': !showMenu, 'flex': showMenu}">
-            <button (click)="toggleNavbar()" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+            <button
+              (click)="toggleNavbar()"
+              type="button"
+              class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+            >
               <span class="sr-only">Close menu</span>
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+              <svg
+                class="h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -45,18 +74,47 @@
       <!-- Menú-->
       <!-- ============================================================== -->
       <nav class="hidden md:flex space-x-10">
-        <a routerLink="home" routerLinkActive #home="routerLinkActive" [class]="(home.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'">
-          <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+        <a
+          routerLink="home"
+          routerLinkActive
+          #home="routerLinkActive"
+          [class]="(home.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="flex-shrink-0 h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+            aria-hidden="true"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+            />
           </svg>
-          <span class="ml-3 text-base font-medium"> Home </span>
+          <span class="ml-2 text-base font-medium"> Home </span>
         </a>
-        <a routerLink="watchlist" routerLinkActive #watchlist="routerLinkActive" [class]="(watchlist.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'">
-          <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-            <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
-            <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+        <a
+          routerLink="watchlist"
+          routerLinkActive
+          #watchlist="routerLinkActive"
+          [class]="(watchlist.isActive ? 'text-blue-700' : 'text-gray-500') + ' flex font-medium hover:text-blue-700'"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="flex-shrink-0 h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            aria-hidden="true"
+          >
+            <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z" />
           </svg>
-          <span class="ml-3 text-base font-medium"> Watchlist </span>
+          <span class="ml-2 text-base font-medium"> Watchlist </span>
         </a>
       </nav>
       <!-- ============================================================== -->
@@ -72,17 +130,45 @@
           <!-- Menú-->
           <!-- ============================================================== -->
           <nav class="grid gap-y-8">
-            <a routerLink="home" routerLinkActive #home="routerLinkActive" [class]="(home.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'">
-              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+            <a
+              routerLink="home"
+              routerLinkActive
+              #home="routerLinkActive"
+              [class]="(home.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="flex-shrink-0 h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                />
               </svg>
               <span class="ml-3 text-base font-medium"> Home </span>
             </a>
 
-            <a routerLink="watchlist" routerLinkActive #watchlist="routerLinkActive" [class]="(watchlist.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'">
-              <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
-                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+            <a
+              routerLink="watchlist"
+              routerLinkActive
+              #watchlist="routerLinkActive"
+              [class]="(watchlist.isActive ? 'text-blue-700 bg-gray-100' : 'text-gray-500 hover:bg-gray-100 hover:text-blue-700') + ' -m-3 p-3 flex items-center rounded-md font-medium'">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="flex-shrink-0 h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z" />
               </svg>
               <span class="ml-3 text-base font-medium"> Watchlist </span>
             </a>
