--- a/src/app/shared/list-item/list-item.component.html
+++ b/src/app/shared/list-item/list-item.component.html
@@ -2,12 +2,21 @@
   <!-- ============================================================== -->
   <!-- Poster de la película -->
   <!-- ============================================================== -->
-  <img [src]="movie.poster_path | poster" alt="" width="75" height="88" class="flex-none rounded-md bg-slate-100" />
+  <img
+    (click)="goToMovie(movie.id)"
+    [src]="movie.poster_path | poster"
+    alt="poster"
+    width="75"
+    height="88"
+    class="flex-none rounded-md bg-slate-100 cursor-pointer wow animate__animated animate__flipInX"
+  />
   <!-- ============================================================== -->
   <!-- Fin poster de la película -->
   <!-- ============================================================== -->
   <div class="min-w-0 relative flex-auto">
-    <h1 class="font-semibold text-gray-900 truncate pr-20 cursor-pointer"
+    <h1
+      (click)="goToMovie(movie.id)"
+      class="font-semibold text-gray-900 truncate pr-20 cursor-pointer"
       tooltip="{{ movie.title }}"
       placement="top"
       [showDelay]="50"
@@ -31,8 +40,17 @@
           tooltipClass="text-sm font-medium tooltip-theme"
           type="button"
         >
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="currentColor">
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          />
         </svg>
         </button>
         <!-- ============================================================== -->
@@ -45,8 +63,15 @@
       <div>
         <dt class="sr-only">Rating</dt>
         <dd class="px-1.5 ring-1 ring-slate-200 rounded flex items-center text-gray-500 text-sm">
-          <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+          <svg
+            class="w-5 h-5 text-yellow-400"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+            />
           </svg>
           {{ ((movie.vote_average * 5)/10) | number:'1.1-1'  }}
         </dd>
@@ -60,8 +85,15 @@
       <div>
         <dt class="sr-only">Popularidad</dt>
         <dd class="px-1.5 ring-1 ring-slate-200 rounded flex items-center text-gray-500 text-sm">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
-            <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"
+            />
           </svg>
           {{ movie.popularity | number: '1.1-2' }}
         </dd>
